--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
                maximum-scale=1.0,
                minimum-scale=1.0,
                user-scalable=no">
+      <!-- 强制全屏模式 -->
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <!-- 状态栏样式 -->
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+      <!-- 独立 Apple 图标（iOS 优先读取此标签） -->
+      <link rel="apple-touch-icon" href="/icon-192x192.png">
     <title>Vite + Vue</title>
   </head>
   <body>
